--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es2015", // for iterating FileList
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
