--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "color-convert": "^2.0.1",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
@@ -32,12 +34,14 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "sharp": "^0.31.3",
+    "sonner": "^1.0.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/color-convert": "^2.0.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
